--- a/index.html
+++ b/index.html
@@ -28,16 +28,16 @@
             </div>
         </div>
         <div class="buttons">
-            <div class="prevBtn" id="backBtn"><img src="./image/Stop_and_play_fill.svg" /></div>
+            <div class="prevBtn" id="backBtn"><img src="Stop_and_play_fill.svg" /></div>
             <div class="playBtn" id="playBtn">
-                <img src="./image/Play_fill.svg" />
+                <img src="Play_fill.svg" />
             </div>
             <div class="playBtn" id="pauseBtn">
                 <i class="bi bi-pause-circle-fill"></i>
             </div>
 
             <div class="nextBtn" id="nextBtn">
-                <img src="./image/Stop_and_play_fill_reverse.svg" />
+                <img src="Stop_and_play_fill_reverse.svg" />
             </div>
         </div>
 
